<resources>
    <string name="app_name">lab03</string>
    <string name="title_home">Home</string>
    <string name="title_BMI">BMI</string>
    <string name="title_calories">Calories</string>
    <string name="title_recipe">Recipe</string>
    <string name="title_quiz">Quiz</string>
    <string name="enter_height">Enter height in cm</string>
    <string name="enter_height_bmi">Enter height in m</string>
    <string name="enter_weight">Enter weight in kg</string>
    <string name="enter_age">Enter age</string>
    <string name="male_radio_button">Male</string>
    <string name="female_radio_button">Female</string>
    <string name="output_bmi">BMI</string>
    <string name="output_bmr">BMR</string>

    <string name="action_settings">Settings</string>
    <string name="number_of_choices">Number of Choices</string>
    <string name="number_of_choices_description">Display 2, 4, 6 or 8 guess buttons</string>
    <string name="world_regions">Regions</string>
    <string name="world_regions_description">Regions to include in the quiz</string>
    <string name="guess_country">Guess the Country</string>
    <string name="results">%1$d guesses, %2$.02f%% correct</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="default_region_message">One region must be selected. Setting North America as the default region.</string>
    <string name="restarting_quiz">Quiz will restart with your new settings</string>
    <string name="question">Question %1$d of %2$d</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="image_description">Image of the current flag in the quiz</string>
    <string name="default_region">North_America</string>
    <string name="custom_dialog_message">Thank you for playing !!</string>
    <string name="custom_dialog_button">OK</string>
    <string name="title_activity_settings">Settings</string>

    <string name="first_recipe_title">Recipe 1 - Veggie yaki udon</string>
    <string name="first_recipe_body">
        Ingredients:\n
        1½ tbsp sesame oil\n
        1 red onion, cut into thin wedges\n
        160g mangetout\n
        70g baby corn, halved\n
        2 baby pak choi, quartered\n
        3 spring onions, sliced\n
        1 large garlic clove, crushed\n
        ½ tbsp mild curry powder\n
        4 tsp low-salt soy sauce\n
        300g ready-to-cook udon noodles\n
        1 tbsp pickled sushi ginger, chopped, plus 2 tbsp of the brine\n\n
        STEP 1\n
        Heat the oil in a non-stick frying pan or wok over a high heat. Add the onion and fry for 5 mins. Stir in the mangetout, corn, pak choi and spring onions and cook for 5 mins more. Add the garlic, curry powder and soy sauce, and cook for another minute.\n
        STEP 2\n
        Add the udon noodles along with the ginger and reserved brine, and stir in 2-3 tbsp hot water until the noodles are heated through. Divide between bowls and serve.
    </string>
    <string name="second_recipe_title">Recipe 2 - Prawn and salmon burgers with spicy mayo</string>
    <string name="second_recipe_body">
        Ingredients:\n
        180g pack peeled raw prawns, roughly chopped\n
        4 skinless salmon fillets, chopped into small chunks\n
        3 spring onions, roughly chopped\n
        1 lemon, zested and juiced\n
        small pack coriander\n
        60g mayonnaise or Greek yogurt\n
        4 tsp chilli sauce (we used sriracha)\n
        2 Little Gem lettuces, shredded\n
        1 cucumber, peeled into ribbons\n
        1 tbsp olive oil\n
        4 seeded burger buns, toasted, to serve\n\n
        STEP 1\n
        Briefly blitz half the prawns, half the salmon, the spring onions, lemon zest and half the coriander in a food processor until it forms a coarse paste. Tip into a bowl, stir in the rest of the prawns and salmon, season well and shape into four burgers. Chill for 10 mins.\n
        STEP 2\n
        Mix the mayo and chilli sauce together in a small bowl, season and add some lemon juice to taste. Mix the lettuce with the cucumber, dress with a little of the remaining lemon juice and 1 tsp olive oil, then set aside.\n
        STEP 3\n
        Heat the remaining oil in a large frying pan and fry the burgers for 3-4 mins each side or until they have a nice crust and the fish is cooked through. Serve with the salad on the side or in toasted burger buns, if you like, with a good dollop of the spicy mayo.
    </string>
</resources>