<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recipe.RecipeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_firstRecipeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:background="@color/amount_background"
                android:elevation="@dimen/elevation"
                android:text="@string/first_recipe_title"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_firstRecipeBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:background="@color/amount_background"
                android:elevation="@dimen/elevation"
                android:scrollbars="vertical"
                android:text="@string/first_recipe_body"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_secondRecipeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/amount_background"
                android:elevation="@dimen/elevation"
                android:text="@string/second_recipe_title"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_secondRecipeBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginBottom="80dp"
                android:background="@color/amount_background"
                android:elevation="@dimen/elevation"
                android:text="@string/second_recipe_body"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>