<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calories.CaloriesFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:columnCount="2"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42000002"
        tools:context=".ui.calories.CaloriesFragment">

        <EditText
            android:id="@+id/weightEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:digits="0123456789"
            android:ems="10"
            android:inputType="number"
            android:maxLength="3"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/weightTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:background="@color/amount_background"
            android:elevation="@dimen/elevation"
            android:hint="@string/enter_weight"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColorHint="#455A64" />

        <EditText
            android:id="@+id/heightEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:digits="0123456789"
            android:ems="10"
            android:inputType="number"
            android:maxLength="3"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/heightTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:background="@color/amount_background"
            android:elevation="@dimen/elevation"
            android:hint="@string/enter_height"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColorHint="#455A64" />

        <EditText
            android:id="@+id/ageEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:digits="0123456789"
            android:ems="10"
            android:inputType="number"
            android:maxLength="3"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:background="@color/amount_background"
            android:elevation="@dimen/elevation"
            android:hint="@string/enter_age"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColorHint="#455A64" />

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="false"
                android:text="@string/male_radio_button" />

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="false"
                android:text="@string/female_radio_button" />

        </RadioGroup>

        <TextView
            android:id="@+id/bmrLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="start"
            android:text="@string/output_bmr"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/bmrTextView"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="end"
            android:background="@color/result_background"
            android:elevation="@dimen/elevation"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </GridLayout>

    <TextView
        android:id="@+id/text_calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />
</androidx.constraintlayout.widget.ConstraintLayout>